# zense_grpc_rgbd_ir

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  install_zense_sdk.sh  libpicozense.pc  requirements.txt  setup.sh
cfg/: camera.toml  template.toml
include/: common.hpp  parameter_manager.hpp  pico_zense_manager.hpp  pico_zense_undistorter.hpp
pico_zense_cython_wrapper/: .gitignore  README.md  camera_parameter.toml  capture.py  main.py  pico_zense_manager.cpp  pico_zense_manager.hpp  requirements.txt  setup.py  template.toml  zense_pywrapper.pyx
protos/: image.proto
scripts/: gen_protobuf_codes.py  merge_far_near_images.py  merged_near_far_viewer_client.py  merged_wdr_manager.py  rgbd_viewer_client.py  single_zense_fitter.py  single_zense_fitter_with_gui.py  wdr_viewer_client.py
scripts/fitter/: cameraparam.py  fitted_line.py  pcl_fitter.py  pcl_result_2d_image_writer.py  pcl_visualizer.py  ransac_fit.py  util.py
scripts/utils/: generate_zense_toml.py  summarize_detection_result.py
src/: common.cpp  parameter_manager.cpp  pico_zense_manager.cpp  pico_zense_simple_publisher.cpp  pico_zense_undistorter.cpp
